# evening-popcorn-backend

./: .gitignore  LICENSE.md  README.md  docker-compose.local.yaml
.github/workflows/: api-gateway-flow.yaml  ep-flow.yaml  github-actions.yaml  moviegeek-actions.yaml  moviegeek-flow.yaml  note
api-gateway/: Dockerfile  api-gateway.http  apple_secret_generator.py  google_secret.json  pyproject.toml
api-gateway/api_gateway/: config.py  main.py  routing.py
api-gateway/api_gateway/controllers/: auth.py  backlog.py  exceptions.py  movie.py
api-gateway/api_gateway/controllers/common_obj/: auth.py  simple_response.py
api-gateway/api_gateway/endpoints/: auth.py  movie.py
api-gateway/api_gateway/repositories/: auth.py  backlog.py  movie.py
api-gateway/api_gateway/repositories/dto/: backlog.py  oauth.py  user.py
api-gateway/deploy/: ingress.yaml  manifest.yaml
api-gateway/src/: config.py  main.py  routing.py
api-gateway/src/controllers/: auth.py  movie.py  social_auth.py
api-gateway/src/controllers/common_obj/: user.py
api-gateway/src/depends/: auth.py
api-gateway/src/endpoints/: movie.py  social_auth.py
api-gateway/src/models/: __init__.py  auth.py  user.py
api-gateway/src/repositories/: auth.py  backlog.py  exceptions.py  movie.py  oauth.py  user.py
api-gateway/src/repositories/dto/: auth.py  movie.py  oauth.py  user.py
api-gateway/src/utils/: apple_secret_generator.py  config_model.py  rand_string.py
api_gateway/: Dockerfile  api-gateway.http
api_gateway/api_gateway/: config.py
api_gateway/api_gateway/controllers/: auth.py  backlog.py  exceptions.py  movie.py  social_auth.py
api_gateway/api_gateway/depends/: auth.py
api_gateway/api_gateway/endpoints/: auth.py  backlog.py  movie.py  social_auth.py
api_gateway/api_gateway/repositories/: backlog.py  (+4 more)
backloger/: Dockerfile  backloger.http  pyproject.toml  run_migrations.py
backloger/backloger/: config.py  controller.py  dto.py  main.py  repository.py
backloger/deploy/: manifest.yaml
backloger/migrations/: 0000.init.sql
base_image/: Dockerfile
deploy/: ingress.yaml  issuer.yaml  manifest.yaml
ep_client/: pyproject.toml
ep_client/ep_client/: responses.py
ep_client/ep_client/backloger/: client.py  responses.py
ep_client/ep_client/moviegeek/: client.py  responses.py
ep_utils/: pyproject.toml
ep_utils/ep_utils/: config_model.py  configs.py
game_host/: game-host.http  go.mod  go.sum  main.go  routing.go
game_host/controllers/: errors.go  game_controller.go
game_host/endpoints/: game_endpoints.go
game_host/lib/: auth.go  http.go  utils.go
game_host/repositories/: game_repository.go  movie_repository.go
moviegeek/: Dockerfile  Makefile  moviegeek.http  pyproject.toml  the-movie-db-api.http
moviegeek/deploy/: deploy.yaml  manifest.yaml
moviegeek/moviegeek/: config.py  main.py  utils.py
moviegeek/moviegeek/controllers/: movie.py
moviegeek/moviegeek/depends/: mongodb_connection.py
moviegeek/moviegeek/repositories/: tmdb.py
moviegeek/moviegeek/repositories/dto/: tmdb.py
moviegeek/src/: config.py  main.py
moviegeek/src/controllers/: movie.py
moviegeek/src/depends/: mongodb_connection.py
moviegeek/src/repositories/: tmdb.py
moviegeek/src/repositories/dto/: tmdb.py
workflows/: github-actions.yaml
(+12 files in other folders)
