[tool.poetry]
name = "ep-client"
version = "0.1.0"
description = ""
authors = ["bitizen248 <van4011@yandex.ru>"]
readme = "README.md"
packages = [{include = "ep_client"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.23.3"
pydantic = "^1.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
