[tool.poetry]
name = "ep-utils"
version = "0.1.0"
description = ""
authors = ["bitizen248 <van4011@yandex.ru>"]
readme = "README.md"
packages = [{include = "ep_utils"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
